<resources>
    <string name="app_name">Myler</string>
    <string name="action_settings">Settings</string>

    <!-- Strings related to login -->
    <string name="password_hint">Password</string>
    <string name="email_hint">Email</string>
    <string name="sign_up_button_label">Sign Up</string>
    <string name="signup_error_message">Please make sure you enter an email address and password!</string>
    <string name="signup_error_title">Error!</string>
    <string name="signup_success">Account successfully created! You can now Login.</string>
    <string name="login_error_message">Please make sure you enter an email address and password!</string>
    <string name="login_error_title">Error!</string>
    <string name="login_button_label">Login</string>
    <string name="sign_up_text">Sign Up!</string>
    <string name="title_activity_login">Sign in</string>
    <string name="add_item">Add New Item</string>
    <string name="action_logout">Logout</string>
    <string name="make">Make</string>
    <string name="model">Model</string>
    <string name="VINNumber">VIN Number</string>
    <string name="year">Year</string>
    <string name="miles">Miles</string>
    <string name="addVehicle">Add Vehicle</string>
    <string name="add_vehicle">New Vehicle</string>
    <string name="oilChange">Mileage of Last Oil Change</string>
    <string name="oilChangeTitle">Oil Change</string>
    <string name="lastOilChangeTitle">Last:</string>
    <string name="next_oil_change">Next:</string>
    <string name="update_mileage">Update Mileage</string>
    <string name="update_oil_change">Update Oil Change</string>
    <string name="recommended_servicing">Recommended Servicing</string>
    <string name="deleteVehicle">Delete Vehicle</string>
    <string name="recent_services">Recent Services</string>
    <string name="all_services">All Services</string>
    <string name="future_services">Future Services</string>
    <string name="past_services">Past Services</string>
    <string name="aboutServiceButtons">Select \'past\' for previous recommended services. Select \'future\' for upcoming recommended services</string>
</resources>
