<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="myler.com.myler.VehicleProfileActivity"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:id="@+id/profileMakeLayout"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/profileMakeTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorAccent"
                    android:text="@string/make"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/colorAccent"/>
                <TextView
                    android:id="@+id/profileMakeTV"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:textStyle="bold"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/profileModelLayout"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/profileModelTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorAccent"
                    android:text="@string/model"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/colorAccent"/>
                <TextView
                    android:id="@+id/profileModelTV"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:textStyle="bold"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/profileYearLayout"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/profileYearTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorAccent"
                    android:text="@string/year"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/colorAccent"/>
                <TextView
                    android:id="@+id/profileYear"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:textStyle="bold"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/profileMilesLayout"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/profileMilesTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorAccent"
                    android:text="@string/miles"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/colorAccent"/>
                <TextView
                    android:id="@+id/profileMiles"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:textStyle="bold"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/profileVinLayout"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/profileVinTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorAccent"
                    android:text="@string/VINNumber"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/colorAccent"/>
                <TextView
                    android:id="@+id/profileVin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:textStyle="bold"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/profileOilChangeLayout"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/profileOilChangeTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorAccent"
                    android:text="@string/oilChangeTitle"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/colorAccent"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/profileLastOilChangeTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/lastOilChangeTitle"
                        android:layout_weight=".27"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/profileLastOilChangeActual"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_weight=".2"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/profileNextOilChangeTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/next_oil_change"
                        android:layout_weight=".27"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/profileNextOilChangeActual"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_weight=".2"
                        android:textStyle="bold"/>

                </LinearLayout>

            </LinearLayout>

            <Button
                android:id="@+id/updateMileage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/update_mileage"
                android:onClick="onUpdateMileage"
                android:layout_gravity="bottom"/>

            <Button
                android:id="@+id/updateOilChangeMileage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/update_oil_change"
                android:onClick="onUpdateOilChangeMileage"
                android:layout_gravity="bottom"/>

            <Button
                android:id="@+id/seeServiceRec"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/recommended_servicing"
                android:onClick="onViewRecServicing"
                android:layout_gravity="bottom"/>

            <Button
                android:id="@+id/deleteVehicleBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/deleteVehicle"
                android:onClick="onDeleteVehicle"
                android:layout_gravity="bottom"/>


        </LinearLayout>

    </ScrollView>
</LinearLayout>
