<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".NewVehicleActivity"
    tools:showIn="@layout/activity_new_vehicle"
    android:orientation="vertical">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
                android:id="@+id/vehicleVin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="bottom"
                android:layout_weight="1">
                <EditText
                    android:id="@+id/VinET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"/>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/VinTV"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/VINNumber"/>
                    <TextView
                        android:id="@+id/autoPopulate"
                        android:layout_marginLeft="46dp"
                        android:layout_width="200dp"
                        android:textColor="@color/colorPrimaryDark"
                        android:layout_height="wrap_content"
                        android:text="Auto populate from VIN"/>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/vehicleMake"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="bottom"
                android:layout_weight="1">
                <EditText
                    android:id="@+id/makeET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"/>
                <TextView
                    android:id="@+id/makeTV"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/make"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/vehicleModel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="bottom"
                android:layout_weight="1">
                <EditText
                    android:id="@+id/modelET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"/>
                <TextView
                    android:id="@+id/modelTV"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/model"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/vehicleYear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="bottom"
                android:layout_weight="1">
                <EditText
                    android:id="@+id/yearET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"/>
                <TextView
                    android:id="@+id/yearTV"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/year"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/vehicleMiles"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="bottom"
                android:layout_weight="1">
                <EditText
                    android:id="@+id/milesET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"/>
                <TextView
                    android:id="@+id/milesTV"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/miles"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/vehicleLastOilChange"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="bottom"
                android:layout_weight="1">
                <EditText
                    android:id="@+id/oilChangeET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"/>
                <TextView
                    android:id="@+id/oilChangeTV"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/oilChange"/>
            </LinearLayout>

            <Button
                android:id="@+id/addVehicleBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/addVehicle"
                android:layout_gravity="bottom"/>

        </LinearLayout>
    </ScrollView>



    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="16dp"
        android:layout_height="16dp" />

</LinearLayout>